--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kuis SD - Anti Soal Ulang</title>
+  <title>Kuis SD - Soal Tidak Diulang</title>
   <style>
     body { font-family: sans-serif; text-align: center; padding: 20px; }
     #login, #quiz, #result, #feedback, #nextBtn, #adminForm { display: none; }
@@ -21,12 +21,13 @@
 </head>
 <body>
 
-  <h2>🎮 Kuis Pelajaran SD - 20 Soal</h2>
+  <h2>🎮 Kuis SD - 20 Soal</h2>
 
   <div id="login">
     <p>Masukkan nama kamu:</p>
     <input type="text" id="username">
     <button onclick="startGame()">🚀 Mulai</button>
+    <button onclick="resetUserData()">🗑️ Reset Data Saya</button>
   </div>
 
   <div id="quiz">
@@ -70,16 +71,22 @@
   <p id="developerInfo">👨‍💻 Developer: <b>ABDUL SUKUR</b></p>
 
   <script>
-    const agamaSoal = [
-      { question: "📘 Siapa nabi terakhir dalam Islam?", options: ["Nabi Isa", "Nabi Ibrahim", "Nabi Musa", "Nabi Muhammad"], answer: "Nabi Muhammad", explanation: "📘 Nabi Muhammad SAW adalah nabi terakhir dalam Islam." }
+    const allQuestions = [
+      {
+        question: "📘 Siapa nabi terakhir dalam Islam?",
+        options: ["Nabi Isa", "Nabi Ibrahim", "Nabi Musa", "Nabi Muhammad"],
+        answer: "Nabi Muhammad",
+        explanation: "📘 Nabi Muhammad SAW adalah nabi terakhir dalam Islam."
+      },
+      {
+        question: "🇬🇧 Translate: 'Cat' to Indonesian.",
+        options: ["Kucing", "Anjing", "Burung", "Ikan"],
+        answer: "Kucing",
+        explanation: "🇬🇧 'Cat' artinya 'Kucing'."
+      }
     ];
 
-    const inggrisSoal = [
-      { question: "🇬🇧 Translate: 'Cat' to Indonesian.", options: ["Kucing", "Anjing", "Burung", "Ikan"], answer: "Kucing", explanation: "🇬🇧 'Cat' artinya 'Kucing'." }
-    ];
-
-    const allQuestions = [...agamaSoal, ...inggrisSoal];
-    const repeated = Array(5).fill(allQuestions).flat(); // perbanyak
+    const repeated = Array(10).fill(allQuestions).flat(); // untuk pengujian
     let questions = [];
     let username = "";
     let currentQuestion = 0;
@@ -106,7 +113,6 @@
         localStorage.setItem("usernames", JSON.stringify(prevUsers));
       }
 
-      // Admin login
       if (username === "123") {
         alert("🛠️ Masuk sebagai admin.");
         document.getElementById("login").style.display = "none";
@@ -114,7 +120,6 @@
         return;
       }
 
-      // Filter soal yang belum pernah dijawab
       let usedQuestions = JSON.parse(localStorage.getItem("used_" + username) || "[]");
       let availableQuestions = repeated.filter(q => !usedQuestions.includes(q.question));
 
@@ -194,7 +199,7 @@
       clearInterval(timer);
       saveScore(username, score);
 
-      // Simpan soal-soal yang sudah digunakan
+      // Simpan soal yang sudah muncul
       const old = JSON.parse(localStorage.getItem("used_" + username) || "[]");
       const newUsed = [...new Set([...old, ...questions.map(q => q.question)])];
       localStorage.setItem("used_" + username, JSON.stringify(newUsed));
@@ -211,6 +216,18 @@
       if (data.length === 0) return "Belum ada pemain.";
       const sorted = data.sort((a, b) => b.score - a.score);
       return sorted.map((item, i) => `${i + 1}. 🧑 ${item.name}: <b>${item.score}</b> poin`).join("<br>");
+    }
+
+    function resetUserData() {
+      const name = document.getElementById("username").value.trim();
+      if (!name) {
+        alert("Masukkan nama kamu terlebih dahulu!");
+        return;
+      }
+      localStorage.removeItem("used_" + name);
+      localStorage.removeItem("quizScores");
+      alert("✅ Data kamu telah dihapus. Silakan login ulang.");
+      location.reload();
     }
 
     function addNewQuestion() {
@@ -231,14 +248,8 @@
       }
 
       const emojiMap = {
-        agama: "📘",
-        inggris: "🇬🇧",
-        indo: "🇮🇩",
-        pkn: "🧠",
-        ips: "🌍",
-        ipa: "🔬",
-        pjok: "🏃",
-        mulok: "🎨"
+        agama: "📘", inggris: "🇬🇧", indo: "🇮🇩", pkn: "🧠",
+        ips: "🌍", ipa: "🔬", pjok: "🏃", mulok: "🎨"
       };
 
       const emoji = emojiMap[cat] || "❓";
@@ -250,7 +261,7 @@
         explanation: `${emoji} ${explanation}`
       };
 
-      questions.push(newQ);
+      allQuestions.push(newQ);
       alert("✅ Soal berhasil ditambahkan!");
       document.getElementById("adminForm").style.display = "none";
     }
